[package]
name = "polldaddy-spam"
version = "0.0.1"
authors = [ "adumbidiot <nathaniel.daniel23@outlook.com>" ]
edition = "2018"
license = "MIT/Apache-2.0"

[dependencies]
crossbeam-queue = "0.2.3"
free-proxy-list = { path = "../free-proxy-list-rs" }
futures = { version = "0.3.5", features = [ "async-await" ] }
parking_lot = "0.11.0"
polldaddy = { path = "../polldaddy" }
reqwest = "0.10.6"
tokio = { version = "0.3.2", features = [ "rt-threaded", "time", "signal", "parking_lot" ] }
