[package]
name = "polldaddy"
version = "0.0.1"
authors = [ "adumbidiot <nathaniel.daniel23@outlook.com>" ]
edition = "2018"
license = "MIT/Apache-2.0"

[dependencies]
bytes = "0.5.4"
ducc = "0.1.3"
futures = "0.3.4"
rand = "0.7.3"
reqwest = { version = "0.10.3", features = [ "gzip" ] }
select = "0.4.3"
serde = { version = "1.0.104", features = [ "derive" ] }
serde_json = "1.0.48"
url = "2.1.1"