[package]
name = "polldaddy"
version = "0.0.1"
authors = [ "adumbidiot <nathaniel.daniel23@outlook.com>" ]
edition = "2018"
license = "MIT/Apache-2.0"

[dependencies]
bytes = "0.5.5"
ducc = "0.1.4"
futures = "0.3.5"
rand = "0.7.3"
reqwest = { version = "0.10.6", features = [ "gzip" ] }
select = "0.5.0"
serde = { version = "1.0.114", features = [ "derive" ] }
serde_json = "1.0.56"
url = "2.1.1"
