[package]
name = "polldaddy"
version = "0.0.1"
authors = [ "adumbidiot <nathaniel.daniel23@outlook.com>" ]
edition = "2018"
license = "MIT/Apache-2.0"

[dependencies]
ducc = "0.1.5"
futures = "0.3.8"
rand = "0.8.1"
reqwest = { version = "0.11.0", features = [ "gzip" ] }
select = "0.6.0"
serde = { version = "1.0.118", features = [ "derive" ] }
serde_json = "1.0.61"
url = "2.2.0"
